# TicTacToe

./: .gitignore  .pylintrc  LICENSE  Pipfile  README.md  dodo.py  pyproject.toml  server.py  tictactoe.py
OnlineTicTacToe/: __main__.py  authentification_page.py  game_page.py  search_game_page.py  setting_page.py  start_page.py  tictactoe.py
app/: authentification_page.py  game_page.py  search_game_page.py  setting_page.py  start_page.py  tictactoe.py
doc/: authentification_page.rst  conf.py  dodo.rst  game_page.rst  index.rst  requirements.txt  search_page.rst  server.rst  setting_page.rst  setup.rst  start_page.rst  tech_doc.rst  tictactoe.rst  user_guide.rst
locale/ru/LC_MESSAGES/: tictactoe.po
server/: server.py
server_dir/: Dockerfile  Pipfile  docker-compose.yml  run_server.sh  server.py
server_dir/database/: game.db
setup/: OnlineTicTacToe.spec  setup.py  setup.spec
